--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="textbox">
       <img id="product" src="images/image-product-desktop.jpg" alt="perfume" />
       <div id="perfume">
-        <p>PERFUME</p>
+        <p class="p">PERFUME</p>
         <h1>Gabrielle <br />Essence Eau <br />De Parfum</h1>
-        <p>
+        <p class="p">
           A floral, solar and voluptuous <br />interpretation composed by
           <br />Olivier Polge, Perfumer-Creator <br />for the House of CHANEL.
         </p>
@@ -48,7 +48,7 @@
         <div class="button">
           <button>
             <img src="images/icon-cart.svg" alt="cart" />
-            <p>Add to Cart</p>
+            <p id="button">Add to Cart</p>
           </button>
         </div>
       </div>
